envs/staging/municipio/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: municipio-deployment
  namespace: webben
  labels:
    app: municipio-server
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: municipio-server
  template:
    metadata:
      labels:
        app: municipio-server
        expose: enabled
        env: none
    spec:
      containers:
        - name: municipio
          image: ghcr.io/dannil76/municipio-deployment-labs:sha-01ce11dda9f51a3a08a0c312b4979ea8d513a7b9
          securityContext:
            readOnlyRootFilesystem: false
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"
          ports:
            - containerPort: 80
