envs/staging/municipio/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: municipio-server-service
  namespace: webben
  labels:
    app: municipio-server
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: municipio-server
    env: none
